--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -305,3 +305,61 @@
     }
   }
 }
+
+//team section
+
+.team-section {
+  .section-title {
+    .top-text {
+      margin-bottom: 117px;
+    }
+  }
+}
+
+//events section
+
+.events-section {
+  .event {
+    display: flex;
+    border-radius: 5px;
+    border: 2px solid $blue;
+    height: 100px;
+    &-col {
+      padding: 15px;
+    }
+    &-date {
+      width: 110px;
+      background-color: $blue;
+      padding: 15px 10px;
+      color: $white;
+      text-align: center;
+    }
+    &-day {
+      font-family: $montserrat;
+      font-size: 28px;
+      letter-spacing: 0.5px;
+      font-weight: 700;
+    }
+    &-month {
+      font-family: $lora;
+      font-size: 20px;
+      font-style: italic;
+      letter-spacing: 0.3px;
+    }
+    &-descr {
+      width: calc(100% - 110px);
+      padding: 18px 23px;
+    }
+    &-place {
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: 0.2px;
+      color: $blue;
+      text-transform: uppercase;
+    }
+    &-name {
+      font-size: 20px;
+      letter-spacing: 0.3px;
+    }
+  }
+}
