--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -319,6 +319,7 @@
 //events section
 
 .events-section {
+  margin-bottom: 152px;
   .event {
     display: flex;
     border-radius: 5px;
@@ -360,6 +361,46 @@
     &-name {
       font-size: 20px;
       letter-spacing: 0.3px;
+    }
+  }
+}
+
+//faq section
+
+.faq-section {
+  max-width: 730px;
+  margin: 0 auto;
+  .faq-accordion {
+    .card {
+      background-color: transparent;
+      border: none;
+    }
+    .card-header {
+      margin-bottom: 20px;
+      padding: 0;
+      background: transparent;
+      border: none;
+    }
+    .btn-link {
+      @include after-elem;
+      letter-spacing: 0.3px;
+      color: $white;
+      text-decoration: none;
+      border-radius: 5px;
+      display: inline-block;
+      border: 2px solid $light-blue;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      padding: 21px;
+      &:after {
+        @include abs-align-y;
+        content: '\f107';
+        font-family: FontAwesome;
+        right: 30px;
+        position: absolute;
+        font-size: 36px;
+      }
     }
   }
 }
