--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -71,6 +71,20 @@ ul {
   line-height: 1.43;
   letter-spacing: 1.2px;
   color: $aqua;
+  display: flex;
+  align-items: center;
+
+  .icon {
+    font-size: 24px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid $aqua;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .arr-link {
