--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -14,6 +14,7 @@ $dark-blue: #07162f;
 //spaces
 
 $section-bottom: 350px;
+$section-mid-bottom: 270px;
 $sub-section-bottom: 230px;
 
 //fonts
@@ -38,4 +39,12 @@ $lora: Lora, sans-serif;
   transform: translateY(-50%);
 }
 
+@mixin abs-icon{
+  position: relative;
+
+  &:after {
+    position: absolute;
+    font-family: FontAwesome;
+  }
+}
 
