--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -258,16 +258,107 @@
   margin-bottom: $section-bottom;
 }
 
+//graphic section
+
+.graphic-section {
+  margin-bottom: $section-bottom;
+  .token-graphic-image {
+    max-width: 650px;
+    display: block;
+    margin: 0 auto;
+  }
+  .token-graphic {
+    position: relative;
+  }
+  .token-graphic-descr {
+    max-width: 56%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 48px;
+    line-height: 1.35;
+    letter-spacing: 1.2px;
+  }
+  .token-graphic-item {
+    position: absolute;
+    z-index: 2;
+
+    .separator {
+      @include after-elem;
+      margin: 25px 0 15px;
+      width: 100%;
+      height: 1px;
+      background-color: $aqua;
+      &:after {
+        @include abs-align-y;
+        width: 15px;
+        height: 15px;
+        background-color: inherit;
+        border-radius: 50%;
+      }
+    }
+    .token-graphic-icon {
+      width: 61px;
+    }
+    .descr {
+      max-width: 265px;
+      font-size: 18px;
+      line-height: 1.33;
+      letter-spacing: 0.9px;
+    }
+    &.left {
+      left: 0;
+      .separator {
+        &:after {
+          right: 0;
+        }
+      }
+    }
+    &.right {
+      text-align: right;
+      right: 0;
+      .separator {
+        &:after {
+          left: 0;
+        }
+      }
+
+      .descr {
+        margin: 0 0 0 auto;
+      }
+    }
+    &.first {
+      width: 444px;
+      top: 63px;
+    }
+    &.second {
+      width: 469px;
+      top: 280px;
+    }
+    &.third {
+      width: 449px;
+      top: 107px;
+    }
+    &.fourth {
+      width: 509px;
+      top: 337px;
+      .descr {
+        max-width: 220px;
+      }
+    }
+  }
+}
+
 //documents section
 
 .documents-section {
   background-color: $dark-blue;
-  margin-bottom: $sub-section-bottom;
+  margin-bottom: $section-mid-bottom;
   .container-fluid {
     padding: 0;
   }
   .document {
-    padding: 22% 20px;
+    padding: 12% 20px;
     text-align: center;
     background-color: $secondary-blue;
     .arr-link {
@@ -311,6 +402,7 @@
     text-transform: uppercase;
   }
   .doc-head {
+    margin-bottom: 70px;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.04;
@@ -355,10 +447,21 @@
     }
   }
   .ts-item {
+    height: 100%;
     padding: 60px 100px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
     border-right: 1px solid rgba(255, 255, 255, 0.4);
     border-collapse: collapse;
+  }
+  .ts-item-title-wrap {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .ts-icon {
+    display: inline-block;
+    max-height: 80px;
+    margin-bottom: 37px;
   }
   .ts-item-title {
     font-size: 24px;
