--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -496,9 +496,83 @@
 //team section
 
 .team-section {
+  margin-bottom: $section-mid-bottom;
   .section-title {
     .top-text {
       margin-bottom: 117px;
+    }
+  }
+  .team-members {
+    margin-bottom: 45px;
+  }
+  .team-member {
+    cursor: pointer;
+    position: relative;
+    border-radius: 3px;
+    transition: all 0.3s;
+    margin: 15px 0;
+
+    .overlay {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $blue;
+      color: $white;
+      padding: 42px 25px;
+      transition: all 0.3s;
+      border-radius: 3px;
+    }
+
+    .member-name {
+      font-size: 23px;
+      font-weight: 900;
+      line-height: 1;
+      letter-spacing: 1.2px;
+    }
+
+    .position {
+      @include after-elem;
+      font-size: 18px;
+      font-weight: 900;
+      line-height: 1.28;
+      letter-spacing: 0.9px;
+      position: relative;
+      padding-bottom: 15px;
+      margin-bottom: 20px;
+      &:after {
+        left: 0;
+        bottom: 0;
+        width: 30px;
+        height: 2px;
+        background-color: $white;
+      }
+    }
+
+    .descr {
+      font-size: 16px;
+      line-height: 1.44;
+      letter-spacing: 0.8px;
+      margin-bottom: 15px;
+    }
+    &:hover {
+      .overlay {
+        opacity: 1;
+      }
+    }
+  }
+  .invitation {
+    text-align: center;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 1px;
+    color: $white;
+
+    a {
+      color: $aqua;
+      text-decoration: underline;
     }
   }
 }
