--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -163,6 +163,31 @@ ul {
   }
 }
 
+.token-block {
+  position: relative;
+  .token-buttons {
+    display: flex;
+    border: 1px solid $aqua;
+    margin-bottom: 18px;
+  }
+  .token-button {
+    font-family: $montserrat;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: $white;
+    padding: 13px;
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    font-size: 36px;
+    &.active {
+      color: $dark-blue;
+      background-color: $aqua;
+    }
+  }
+}
+
+
 .marker {
   padding: 4px 14px;
   height: 25px;
