--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -10,6 +10,7 @@ $light-blue: #1fb6ff;
 $blue: #5140ff;
 $secondary-blue: #21254d;
 $dark-blue: #07162f;
+$transp: transparent;
 
 //spaces
 
@@ -56,6 +57,30 @@ $lora: Lora, sans-serif;
   &:after {
     position: absolute;
     font-family: FontAwesome;
+  }
+}
+
+@mixin optional-at-root($sel) {
+  @at-root #{if(not &, $sel, selector-append(&, $sel))} {
+    @content;
+  }
+}
+
+@mixin placeholder {
+  @include optional-at-root('::-webkit-input-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root('::-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-ms-input-placeholder') {
+    @content;
   }
 }
 
