--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -584,6 +584,7 @@
     }
     .partner-link {
       text-align: center;
+      width: 100%;
     }
     &.b-bottom {
       border-bottom: 1px solid $white;
@@ -784,7 +785,6 @@
     color: $light-grey;
   }
 }
-
 
 //modal
 
