--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -52,6 +52,12 @@ $lora: Lora, sans-serif;
   transform: translateX(-50%);
 }
 
+@mixin abs-align {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin abs-icon {
   position: relative;
 
