--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -15,9 +15,9 @@ $transp: transparent;
 
 //spaces
 
-$section-bottom: 350px;
-$section-mid-bottom: 270px;
-$sub-section-bottom: 230px;
+$section-space: 350px;
+$section-mid-space: 270px;
+$section-sub-bottom: 230px;
 
 //fonts
 
