--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -48,6 +48,10 @@ ul {
   }
 }
 
+.common-bg {
+  background: url(../images/token-graph-bg.png) 0 292px/100% auto no-repeat;
+}
+
 .main-title {
   font-family: $montserrat;
   font-size: 72px;
