add new contact to lists and switch investor type

--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -198,6 +198,7 @@ ul {
     width: 50%;
     text-align: center;
     font-size: 36px;
+    cursor: pointer;
     &.active {
       color: $dark-blue;
       background-color: $aqua;
