--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -970,3 +970,44 @@
     }
   }
 }
+
+.select2{
+  background-color: transparent;
+  border-bottom: 1px solid #fff;
+  margin-bottom: 10px !important;
+  padding: 10px 0;
+
+  .select2-container--default, .select2-selection--single{
+    background-color: transparent!important;
+    border: none!important;
+    color: $white;
+
+    .select2-selection__rendered{
+      color: $white!important;
+    }
+
+    .select2-selection__arrow{
+      height: 50px!important;
+
+      &  b{
+        border-color: $white transparent transparent transparent!important;
+      }
+    }
+
+
+  }
+}
+
+.select2-container{
+  .select2-dropdown{
+    background-color: $blue!important;
+
+    .select2-results__option[aria-selected=true]{
+      background-color: $dark-blue!important;
+    }
+  }
+}
+
+.grecaptcha-badge{
+  display: none;
+}
