--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -239,3 +239,11 @@ ul {
 .error::placeholder{
   color: darkred !important;
 }
+
+.error-radio {
+  color: darkred !important;
+
+  a{
+    color: darkred !important;
+  }
+}
