--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1015,3 +1015,88 @@
 .grecaptcha-badge{
   display: none;
 }
+
+#modal-title{
+  width: 550px;
+  height: 50px;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.33;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #ffffff;
+}
+
+#modal-sub-title{
+  width: 500px;
+  height: 45px;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+#whitelistModalSend{
+
+  #modal-title-send{
+    width: 500px;
+    height: 130px;
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.33;
+    letter-spacing: 0.5px;
+    text-align: center;
+    color: #ffffff
+  }
+
+  .modal-body{
+
+    padding-bottom: 30px;
+    padding-top: 20px;
+
+    .telegram-button{
+      text-align: center;
+      padding: 0 10px;
+      border-radius: 12px;
+      background-color: #42faff;
+
+      i{
+        margin: 0 5px;
+      }
+    }
+    .bitwala-button{
+      text-align: center;
+      width: 90px;
+      height: 27px;
+      border-radius: 12px;
+      background-color: #42faff;
+    }
+
+    p{
+      width: 168px;
+      height: 45px;
+      font-family: Lato;
+      font-size: 14px;
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.36;
+      letter-spacing: normal;
+      text-align: left;
+      color: #ffffff;
+    }
+
+  }
+
+}
