--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -1,3 +1,11 @@
+@media (max-width: 1200px) {
+  .discover-section {
+    .descr-title {
+      font-size: 38px;
+    }
+  }
+}
+
 @media (max-width: 1100px) {
 
 }
