--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -891,6 +891,7 @@
 .whitelist-modal {
   .modal-dialog {
     max-width: 650px;
+    margin-top: 6rem;
   }
   .modal-content {
     background-color: $blue;
@@ -900,7 +901,7 @@
     flex-direction: column;
     align-items: center;
     border: none;
-    padding-bottom: 10px;
+    padding: 20px;
   }
   .modal-body {
     padding: 0 75px;
@@ -908,7 +909,7 @@
   .logo {
     margin-bottom: 25px;
     img {
-      max-width: 140px;
+      max-width: 125px;
     }
   }
   .modal-title {
@@ -941,6 +942,9 @@
     opacity: 1;
     font-size: 37px;
     padding: 10px 18px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
   }
   .btn {
     min-width: 220px;
@@ -1001,7 +1005,7 @@
     margin-bottom: 40px;
   }
   .modal-body {
-    padding-bottom: 60px;
+    padding-bottom: 70px;
     .modal-secondary-btn {
       text-align: center;
       padding: 5px 15px;
