--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -1,7 +1,65 @@
 @media (max-width: 1200px) {
+  body {
+    font-size: 16px;
+  }
   .discover-section {
     .descr-title {
       font-size: 38px;
+    }
+  }
+  .logo {
+    img {
+      max-width: 110px;
+    }
+  }
+  .section-title {
+    .top-text {
+      font-size: 80px;
+    }
+    .bottom-text {
+      font-size: 54px;
+    }
+  }
+  .roadmap-section {
+    .roadmap-item {
+      padding: 45px;
+    }
+    .item-descr {
+      font-size: 16px;
+    }
+  }
+  .graphic-section {
+    .token-graphic-descr {
+      font-size: 38px;
+    }
+  }
+  .ts-facts-section {
+    .ts-item {
+      padding: 60px;
+    }
+  }
+  .reviews-slider {
+    .carousel-indicators {
+      li {
+        img {
+          max-width: 70%;
+        }
+      }
+    }
+    .bg-img {
+      min-height: 100%;
+      min-width: 100%;
+    }
+    .review-text {
+      max-width: 100%;
+    }
+  }
+  .team-section {
+    .team-member {
+      font-size: 14px;
+      .overlay {
+        padding: 25px;
+      }
     }
   }
 }
