--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -270,6 +270,10 @@
     width: 56%;
     margin: 0 20px 0 auto;
   }
+  .section-img-mobile {
+    text-align: center;
+    display: none;
+  }
   .section-descr {
     position: relative;
     .abs-container {
